src/objects/TriageCriteria__c.object
<CustomObject>
    <description>SFDC1-7557, This object is to store Case routing criteria and subsequent actions.</description>
    <fields>
        <fullName>CalculatedSortOrder__c</fullName>
        <description>SFDC1-7557, Formula to calculate the complexity of the rule</description>
        <formula>If(ISBLANK(Subject__c),0,1)+
If(ISBLANK(Type__c),0,1)+
If(ISBLANK(Subtype__c),0,1)+
If(ISBLANK(WebEmail__c),0,1)+
If(ISBLANK(SkillLevel__c),0,1)+
If(ISBLANK( ProductFamily__c ),0,1)+
If(ISBLANK( ProductGroup__c ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Rule Complexity</inlineHelpText>
        <label>Calculated Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>SFDC1-5947, to see if rule is active or not.</description>
        <inlineHelpText>Rule will be evaluated when the value is checked.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>SFDC1-5947, Priority of this rule.</description>
        <inlineHelpText>Priority of this rule (1 being highest and being evaluated first).</inlineHelpText>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7557 Product Family for case comparison</description>
        <inlineHelpText>Product Family</inlineHelpText>
        <label>Product Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Triage Criteria</relationshipLabel>
        <relationshipName>TriageCriteriaProductFamily</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7557 Product group for comparing case</description>
        <inlineHelpText>Product Group</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Triage Criteria</relationshipLabel>
        <relationshipName>TriageCriteriaProductGroup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>SFDC1-7557 Queues to which case will be assigned</description>
        <inlineHelpText>Queue to which case will be assigned</inlineHelpText>
        <label>Queue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FM | DS Match</fullName>
                </value>
                <value>
                    <fullName>FM | Trade Processing</fullName>
                </value>
                <value>
                    <fullName>FM | WSO</fullName>
                </value>
                <value>
                    <fullName>CS | Chemical</fullName>
                </value>
                <value>
                    <fullName>CS | Energy | CDN</fullName>
                </value>
                <value>
                    <fullName>CS | Energy | ETA</fullName>
                </value>
                <value>
                    <fullName>CS | Energy | Insight</fullName>
                </value>
                <value>
                    <fullName>CS | Energy | US</fullName>
                </value>
                <value>
                    <fullName>CS | Product Design</fullName>
                </value>
                <value>
                    <fullName>CS | Technology</fullName>
                </value>
                <value>
                    <fullName>CS | Trade</fullName>
                </value>
                <value>
                    <fullName>CS | Transportation</fullName>
                </value>
                <value>
                    <fullName>FM | MW | All Other</fullName>
                </value>
                <value>
                    <fullName>FM | MSERV Regulatory Reporting</fullName>
                </value>
                <value>
                    <fullName>FM | MW | Clearing</fullName>
                </value>
                <value>
                    <fullName>FM | MW | L1</fullName>
                </value>
                <value>
                    <fullName>FM | MW | User Setup</fullName>
                </value>
                <value>
                    <fullName>FM | MW | Reports</fullName>
                </value>
                <value>
                    <fullName>FM | MW | Static Data</fullName>
                </value>
                <value>
                    <fullName>FM | EGUS Egains</fullName>
                </value>
                <value>
                    <fullName>FM | MW | User Deactivations</fullName>
                </value>
                <value>
                    <fullName>FM | MW | User Clones Static Conf.</fullName>
                </value>
                <value>
                    <fullName>FM | MW | Password Reset</fullName>
                </value>
                <value>
                    <fullName>FM | MSERV UAT</fullName>
                </value>
                <value>
                    <fullName>FM | MSERV FX</fullName>
                </value>
                <value>
                    <fullName>FM | MW | Book Updates</fullName>
                </value>
                <value>
                    <fullName>FM | FRTB Client Services</fullName>
                </value>
                <value>
                    <fullName>FM | MW | High Priority</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>CS | Goldfire | Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SkillLevel__c</fullName>
        <description>SFDC1-7557, Skill Level to be compared.</description>
        <inlineHelpText>Skill Level to be compared.</inlineHelpText>
        <label>Skill Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>SFDC1-7557, Subject to be compared for Case</description>
        <inlineHelpText>Subject to be compared for Case</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>SFDC1-7557, Case Subtype to be compared.</description>
        <inlineHelpText>Case Subtype to be compared.</inlineHelpText>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>SFDC1-7557, Case Type to be compared.</description>
        <inlineHelpText>Case Type to be compared.</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebEmail__c</fullName>
        <description>SFDC1-7557 Web Email for comparison</description>
        <inlineHelpText>Web Email</inlineHelpText>
        <label>Web Email</label>
        <type>Email</type>
    </fields>
    <label>Triage Criteria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Queue__c</columns>
        <columns>ProductGroup__c</columns>
        <columns>SkillLevel__c</columns>
        <columns>Subject__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FM_MW_All_Other</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Priority__c</columns>
        <columns>Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Queue__c</field>
            <operation>equals</operation>
            <value>FM | MW | Book Updates</value>
        </filters>
        <label>FM | MW | All Other</label>
    </listViews>
    <listViews>
        <fullName>TriageForMarkit</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>SkillLevel__c</columns>
        <columns>ProductGroup__c</columns>
        <columns>Priority__c</columns>
        <columns>Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TriageCriteria__c.Markit</value>
        </filters>
        <label>Triage for Markit</label>
    </listViews>
    <listViews>
        <fullName>TriageforIHS_TriageCriteria</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>SkillLevel__c</columns>
        <columns>ProductGroup__c</columns>
        <columns>Priority__c</columns>
        <columns>Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TriageCriteria__c.IHS</value>
        </filters>
        <label>Triage for IHS</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TriageforMarkitSERV_TriageCriteria</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Type__c</columns>
        <columns>Subtype__c</columns>
        <columns>Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TriageCriteria__c.MarkitSERV</value>
        </filters>
        <label>Triage for MarkitSERV</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TRC-{000000}</displayFormat>
        <label>Triage Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Triage Criteria</pluralLabel>
    <recordTypes>
        <fullName>IHS</fullName>
        <active>true</active>
        <description>Record type for Triage object to manage IHS case assignment rules for Customer Care cases</description>
        <label>IHS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Markit</fullName>
        <active>true</active>
        <description>Record type for Triage object to manage Markit case assignment rules for Customer Care cases</description>
        <label>Markit</label>
    </recordTypes>
    <recordTypes>
        <fullName>MarkitSERV</fullName>
        <active>true</active>
        <description>Record type for Triage object to manage Markit SERV case assignment rules for Customer Care cases</description>
        <label>MarkitSERV</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PriorityMandatoryForTriageRule</fullName>
        <active>true</active>
        <description>SFDC1-7557 This rule mandates user to add priority of triage rule.</description>
        <errorConditionFormula>ISBLANK(Priority__c)</errorConditionFormula>
        <errorDisplayField>Priority__c</errorDisplayField>
        <errorMessage>Please specify priority of the rule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProductGroupMandatoryForIHSTriageRule</fullName>
        <active>false</active>
        <description>SFDC1-7557 This rule mandates user to add product group for IHS triage rule</description>
        <errorConditionFormula>AND(
ISBLANK(ProductGroup__c),
RecordType.DeveloperName == &apos;IHS&apos;
)</errorConditionFormula>
        <errorDisplayField>ProductGroup__c</errorDisplayField>
        <errorMessage>Please specify Product group for the rule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QueueMandatoryForTriageRule</fullName>
        <active>true</active>
        <description>SFDC1-7557 This rule mandates user to add queue for triage rule.</description>
        <errorConditionFormula>ISBLANK(TEXT(Queue__c))</errorConditionFormula>
        <errorDisplayField>Queue__c</errorDisplayField>
        <errorMessage>Please specify Queue for the rule. In case a match is found, case will be assigned to this queue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubjectMandatoryForMSERVTriageRule</fullName>
        <active>false</active>
        <description>SFDC1-7557 This rule mandates user to add subject for MSERV triage rule</description>
        <errorConditionFormula>AND(
ISBLANK(Subject__c),
RecordType.DeveloperName == &apos;MarkitSERV&apos;
)</errorConditionFormula>
        <errorDisplayField>Subject__c</errorDisplayField>
        <errorMessage>Please specify Subject for the rule.</errorMessage>
    </validationRules>
</CustomObject>